data/diff_tests/wasmtime/unreachable_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1753.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\84\80\80\80\00\01\60"
    "\00\00\02\95\80\80\80\00\01\03\65\6e\76\0d\74\72"
    "\61\70\5f\66\75\6e\63\74\69\6f\6e\00\00\03\82\80"
    "\80\80\00\01\00\0a\8f\80\80\80\00\01\89\80\80\80"
    "\00\00\03\40\10\00\0c\00\0b\0b"
  )
""
)